--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ css: ['index.css', 'sidebar-popular-repo.css']
                     <p class="post-list-description">
                         {{ post.excerpt | strip_html | strip }}
                     </p>
+                    {% if post.demoUrl %}
+                    <p class="post-list-meta">
+                       <a class="hvr-underline-from-center" href="{{post.demoUrl}}" target="_blank">Demo</a>
+                    </p>
+                    {% endif %}
                     <p class="post-list-meta">
                         <span class="octicon octicon-calendar"></span> {{ post.date | date: "%Y/%m/%d" }}
                     </p>
